# checking-service

./: .env.example  .gitignore  README.md  pyproject.toml
src/checking_service/: main.py
src/checking_service/application/: application_errors.py
src/checking_service/application/dto/: execution_result.py  execution_result_dto.py  input_case.py  submission.py
src/checking_service/application/mappers/: enum_mapper.py  execution_result.py  execution_result_mapper.py  input_case.py  input_case_mapper.py  submission.py  submission_mapper.py
src/checking_service/application/ports/: runner.py  unit_of_work.py
src/checking_service/application/repositories/: execution_result.py  input_case.py
src/checking_service/application/use_cases/: create_execution_result.py  create_input_case.py  run_submission_use_case.py
src/checking_service/core/: base_error.py
src/checking_service/domain/: domain_errors.py
src/checking_service/domain/enums/: language.py  status.py
src/checking_service/domain/errors/: assignment_limits_errors.py  domain_errors.py  execution_result_errors.py  input_case_errors.py  submission_errors.py
src/checking_service/domain/models/: __init__.py  assignment_limits.py  execution_result.py  input_case.py  submission.py
src/checking_service/infrastructure/: infrastructure_errors.py
src/checking_service/infrastructure/config/: settings.py
tests/unit/application/: dto_factories.py  factories.py
tests/unit/domain/: domain_models_factories.py  factories.py  test_assignment_limits.py  test_execution_result.py  test_input_case.py  test_submission.py
(+36 files in other folders)
