[project]
name = "checking-service"
version = "0.1.0"
description = ""
authors = [
    {name = "HuleNet",email = "sidrus.study@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.15.7,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "checking_service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
app = "checking_service.main:start"